--- a/SimpleRuleEngine/RuleEngineTests/RuleEngineTests.csproj
+++ b/SimpleRuleEngine/RuleEngineTests/RuleEngineTests.csproj
@@ -53,7 +53,6 @@
     <Compile Include="IntegerTests.cs" />
     <Compile Include="MockImplementation\Conditions\IntegerEqualToCondition.cs" />
     <Compile Include="MockImplementation\Conditions\IntegerGreaterThanCondition.cs" />
-    <Compile Include="MockImplementation\Engine\IntegerRuleEngine.cs" />
     <Compile Include="MockImplementation\Rules\IntegerGreaterThanEqualToRule.cs" />
     <Compile Include="MockImplementation\Rules\IntegerGreaterThanRule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -64,6 +63,9 @@
       <Project>{0f98748f-a29a-4cd2-976e-fd5102c9294f}</Project>
       <Name>RuleEngine</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="MockImplementation\Engine\" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
