--- a/SimpleRuleEngine/RuleEngineTests/RuleEngineTests.csproj
+++ b/SimpleRuleEngine/RuleEngineTests/RuleEngineTests.csproj
@@ -53,10 +53,13 @@
     <Compile Include="IntegerTests.cs" />
     <Compile Include="MockImplementation\Conditions\IntegerEqualToCondition.cs" />
     <Compile Include="MockImplementation\Conditions\IntegerGreaterThanCondition.cs" />
+    <Compile Include="MockImplementation\Entities\GameState.cs" />
+    <Compile Include="MockImplementation\Entities\GameStateTransition.cs" />
     <Compile Include="MockImplementation\Rules\IntegerGreaterThanEqualToRule.cs" />
     <Compile Include="MockImplementation\Rules\IntegerGreaterThanRule.cs" />
+    <Compile Include="MockImplementation\Rules\TransitionChangeRule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StateTransitionTest.cs" />
+    <Compile Include="GameStateTransitionTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RuleEngine\RuleEngine.csproj">
@@ -65,6 +68,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="MockData\" />
     <Folder Include="MockImplementation\Engine\" />
   </ItemGroup>
   <Choose>
