20150123-0548 Big Refactor to remove the actual value from teh rule and condition to allow the rule engine to apply the same rule to multiple values.

--- a/SimpleRuleEngine/RuleEngine/RuleEngine.csproj
+++ b/SimpleRuleEngine/RuleEngine/RuleEngine.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Base\BaseCondition.cs" />
     <Compile Include="Base\BaseRule.cs" />
     <Compile Include="Contracts\ICondition.cs" />
     <Compile Include="Contracts\IRule.cs" />
